added Clear button to UI

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li>Complete homework<span><button class="edit">Edit</button><button class="delete">Delete</button></span>
             </li>
         </ul>
+        <button id="clear">Clear All Todos</button>
     </div>
     <!-- script tags -->
 
