--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
             <button type="submit" id="addButton">Add</button>
         </form>
         <ul>
-            <li>Bring Vegetables <span><button class="edit">Edit</button><button class="delete">Delete</button></span>
-            </li>
-            <li>Feed Cat<span><button class="edit">Edit</button><button class="delete">Delete</button></span></li>
-            <li>Complete homework<span><button class="edit">Edit</button><button class="delete">Delete</button></span>
-            </li>
+
         </ul>
-        <button id="clear">Clear All Todos</button>
+        <button id="clear">Clear All</button>
     </div>
     <!-- script tags -->
 
